# FamilyAccountingProject

./: .gitignore  pyproject.toml
src/: main.py
src/config/: main.py
src/familyaccountingproject/: database.py  models.py  repository.py  schemas.py  unit_of_work.py
src/migrations/: env.py
src/migrations/versions/: 260540441603_.py  c5a8b1d79f98_add_general_data.py  e585f9df6e8d_add_test_data.py  fa3bf827ec4f_init.py
