[project]
name = "familyaccountingproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Оля",email = "vitaliy.srt1985@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings (>=2.11.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "familyaccountingproject", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
